<resources>
    <string name="FamilyMapClient">FamilyMapClient</string>
    <string name="label_main_activity">MainActivity</string>
    <string name="hello_first_fragment">Hello World!</string>
    <string name="next">Next for Button</string>
    <string name="previous">Previous Button</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="second_fragment_label">Second Fragment Label</string>
    <string name="ip_address">IP Address</string>
    <string name="_10_0_2_2">10.0.2.2</string>
    <string name="hintServerHost">Enter Server Host Address</string>
    <string name="server_port">Server Port</string>
    <string name="hintServerPort">Server Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="introMapMessageOne">Click on a marker to see relevant event details.</string>
    <string name="introMapMessageTwo">Explore!</string>
    <string name="searchbutton">searchButton</string>
    <string name="settingsbutton">settingsButton</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gender">GENDER</string>
    <string name="person_details">Person Details</string>
    <string name="event_view">Event View</string>
    <string name="placeholder_name">Placeholder Name</string>
    <string name="first_name_caps">FIRST NAME</string>
    <string name="last_name_caps">LAST NAME</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="show_fathers_side">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="filter_mothers_side">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_by_male_events">FILTER BY MALE EVENTS</string>
    <string name="female_events">Female Events</string>
    <string name="filter_by_female_events">FILTER BY FEMALE EVENTS</string>
    <string name="logout">Logout</string>
    <string name="tap_to_return_to_login_screen">TAP TO RETURN TO LOGIN SCREEN</string>
    <string name="event_info">Event Info</string>
    <string name="event_person">Event Person</string>
    <string name="serverHost_actual">192.168.50.28</string>
    <string name="serverPort_actual">8080</string>
    <string name="sheila">sheila</string>
    <string name="parker">parker</string>
    <string name="text_sample">childtoptext</string>


</resources>