<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_person">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        android:title="@string/person_details"
        app:popupTheme="@style/AppTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fillerForExtraSpace"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center"
            android:orientation="horizontal" />

        <View
            android:id="@+id/firstNameDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/personFirstName"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/placeholder_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/first_name_caps"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:id="@+id/lastNameDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/personLastName"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/last_name_caps"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:id="@+id/genderDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="7dp" />

            <TextView
                android:id="@+id/personGender"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/gender"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:id="@+id/listViewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <ExpandableListView
            android:id="@+id/expandableListPersons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>